--- a/Backend/package.json
+++ b/Backend/package.json
@@ -21,6 +21,7 @@
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-rate-limit": "^7.5.0",
     "express-validator": "^7.0.1",
     "fs": "^0.0.1-security",
     "index.js": "^0.0.3",
