--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.3.0",
     "react-scripts": "5.0.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
